--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -1,4 +1,82 @@
 .homes {
-    background-color: $color-secondary;
     grid-column: centre-start / centre-end;
+    margin: 15rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem,1fr));
+    grid-gap: 6rem;
+    
+}
+
+.home {
+    background-color: $color-grey-light-1;
+
+    display: grid;
+    grid-template-columns: repeat(2,[col-start] 1fr [col-end]);
+    grid-row-gap: 3.5rem;
+    &__img {
+        width: 100%;
+        grid-column: col-start 1 / -1;
+        grid-row: 1 / 2;
+        z-index: 1;
+    }
+    &__like {
+        fill: $color-primary;
+        height: 2.5rem;
+        width: 2.5rem;
+        grid-column: col-start 2 / col-end 2;
+        grid-row: 1 / 2;
+        justify-self: end;
+        margin: 1rem;
+        z-index: 2;
+    }
+
+    &__name {
+        grid-row: 1 / 2;
+        grid-column: 1 / -1;
+        justify-self: center;
+        align-self: end;
+        z-index: 3;
+
+        width: 80%;
+        font-family: $font-display;
+        font-size: 1.6rem;
+        text-align: center;
+        padding: 1.25rem;
+        background-color: $color-secondary;
+        color: #fff;
+        font-weight: 400;
+        transform: translateY(50%);
+    }
+
+    &__location,
+    &__rooms {
+        margin-top:2.5rem;
+    }
+
+    &__location,
+    &__rooms,
+    &__area,
+    &__price {
+        font-size: 1.5rem;
+        margin-left: 2rem;
+        
+        display: flex;
+        align-items: center;
+        svg {
+            fill: $color-primary;
+            height: 2.5rem;
+            width: 2.5rem;
+            margin-right: 1.5rem;
+        }
+
+        p {
+
+        }
+    }
+
+    &__btn {
+        margin-top: 1rem;
+        grid-column: col-start 1 / -1;
+    }
+
 }
