--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,10 +1,55 @@
+%imgwidth {
+    width: 100%;
+}
+
 .story{
     &__pictures{
-        background-color: $color-primary;
+        // background-color: $color-primary;
+        background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
         grid-column: full-start / col-end 4;
+
+        display: grid;
+        grid-template-columns: repeat(6, [col-start] 1fr [col-end]);
+        grid-template-rows: repeat(6,[row-start] 1fr [row-end]);
+        align-items: center;
     }
+    &__img--1 {
+        @extend %imgwidth;
+        border-radius: .3rem;
+        grid-column: col-start 2 / col-end 5;
+        grid-row: row-start 2 / span 4;
+        box-shadow: 0 2rem 5rem rgba($color-black, .3);
+       
+    }
+    &__img--2 {
+        width: 115%;
+        border-radius: .3rem;
+        grid-column: col-start 4 / span 4;
+        grid-row: row-start 4 / span 2;
+        z-index: 10;
+        box-shadow: 0 2rem 5rem rgba($color-black, .3);
+        
+    } 
     &__content{
         background-color:$color-grey-light-1;
         grid-column: col-start 5 / full-end;
+
+        padding: 6rem 7.5vw;
+        
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // align-items: flex-start;
+
+        display: grid;
+        align-content: center;
+        justify-items: start;
+        
+    }
+
+    &__text {
+        font-size: 1.5rem;
+        font-style: italic;
+        margin-bottom: 4rem;
     }
 }
